<resources>
    <string name="app_name">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="start_btn">Start</string>
    <string name="set_btn">Set</string>
    <string name="daily_avg_view">Your daily average:</string>
    <string name="usage_today_view">Usage today:</string>
    <string name="week_usage_view">Usage this week:</string>
    <string name="weekly_avg_view">Your weekly average:</string>
    <string name="set_timer_view">Set Timer:</string>
    <string name="current_timer_view">Current Timer</string>
    <string name="remove_app">Remove App</string>
    <string name="packages_activity_name">Select Apps</string>
    <string name="total_usage_main">Total Usage</string>
    <string name="fab_description">Add applications</string>
    <string name="main_activity_title">Summary</string>
    <string name="delete_btn_description">Delete all apps</string>
    <string name="delete_app_btn_description">Delete Application</string>
    <string name="timer_hour_hint">hrs</string>
    <string name="timer_min_hint">min</string>
    <string name="cancel_select_description">Cancel Selection</string>
    <string name="explore">Explore</string>
    <string name="summary">Summary</string>
    <string name="explore_activity_title">Explore</string>

    <!-- All articles sourced from https://digitalwellbeing.org -->
    <!-- Article Titles -->
    <string name="article1">What is Digital Wellbeing? A List of Definitions</string>
    <string name="article2">Is technology addiction a myth? (new video-short and Twitter debate)</string>
    <string name="article3">Three tips for a healthy digital life during the coronavirus outbreak</string>
    <string name="article4">Are our brains really no match for our technology?</string>
    <string name="article5">Are you making social media toxic? Take the Moral Grandstanding test</string>
    <string name="article6">Are we underestimating digital media harm?</string>
    <string name="article7">Instagram extends hiding “likes” to promote digital wellbeing</string>

    <!-- Article time to read -->
    <string name="time1">7 min read</string>
    <string name="time2">4 min read</string>
    <string name="time3">5 min read</string>
    <string name="time4">3 min read</string>
    <string name="time5">4 min read</string>
    <string name="time6">3 min read</string>
    <string name="time7">4 min read</string>

    <!-- Article links -->
    <string name="link1">https://digitalwellbeing.org/what-is-digital-wellbeing-a-list-of-definitions/</string>
    <string name="link2">https://digitalwellbeing.org/is-technology-addiction-a-myth-new-video-short-and-twitter-debate/</string>
    <string name="link3">https://digitalwellbeing.org/three-tips-for-a-healthy-digital-life-during-the-coronavirus-outbreak/</string>
    <string name="link4">https://digitalwellbeing.org/are-our-brains-really-no-match-for-our-technology/</string>
    <string name="link5">https://digitalwellbeing.org/are-you-making-social-media-toxic-take-the-moral-grandstanding-test/</string>
    <string name="link6">https://digitalwellbeing.org/are-we-underestimating-digital-media-harm/</string>
    <string name="link7">https://digitalwellbeing.org/instagram-extends-hiding-likes-to-promote-digital-wellbeing/</string>
    <string name="phone_unlocks">Phone Unlocks</string>

</resources>